<resources>
    <string name="app_name">SpendingTracker</string>

    <string name="title_account">Account</string>
    <string name="total">Total</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="savings">Savings :</string>
    <string name="settings">Settings</string>

    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="add">Add</string>

    <string name="trans">Transaction</string>
</resources>
